--- a/ios/rnproductosapp/Info.plist
+++ b/ios/rnproductosapp/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>necesito acceso a la galeria para subir fotos de productos</string>
+	<key>NSCameraUsageDescription </key>
+	<string>necesito acceso a la camara para tomar fotos de productos</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
